example/secondfile/objects/COS_Value__c.object
<CustomObject>
    <fields>
        <fullName>COS_1__c</fullName>
        <label>COS 1</label>
        <precision>16</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>COS_2__c</fullName>
        <label>COS 2</label>
        <precision>16</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>COS_3__c</fullName>
        <label>COS 3</label>
        <precision>16</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Egress_COS_Profile_ID__c</fullName>
        <label>Egress COS Profile ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Egress_PPCOS__c</fullName>
        <label>Egress PPCOS</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ingress_COS_Profile_ID__c</fullName>
        <label>Ingress COS Profile ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ingress_PPCOS__c</fullName>
        <label>Ingress PPCOS</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Package_AVPN__c</fullName>
        <label>Package AVPN</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <inlineHelpText>Used to store the product name</inlineHelpText>
        <label>Product</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Prof_E_Value__c</fullName>
        <label>Prof-E Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>COS Value</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Egress_COS_Profile_ID__c</columns>
        <columns>Egress_PPCOS__c</columns>
        <columns>Ingress_COS_Profile_ID__c</columns>
        <columns>Ingress_PPCOS__c</columns>
        <columns>Package_AVPN__c</columns>
        <columns>Product__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>All1</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>COS-{0000}</displayFormat>
        <label>COS Value Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>COS Values</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>